--- a/index.html
+++ b/index.html
@@ -3,9 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mouloud Portfolio</title>
+    <script src="https://kit.fontawesome.com/5947b02e5b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dosis&family=Fugaz+One&family=Noto+Sans&family=Poppins:wght@100;400&display=swap" rel="stylesheet">
+
+    <title>Mouloud Portfolio | Home Page</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h1>Moulouds Portfolio</h1>
+            <ul>
+                <a href="#home"><li>Home</li></a>
+                <a href="#skills"><li>Skills</li></a>
+                <a href="/projects.html"><li>Projects</li></a>
+                <a href="#contact"><li>Contact</li></a>
+                <li><i class="fa-brands fa-github" id="iconButton"></i></li>
+                <li><i class="fa-brands fa-linkedin" id="iconButton"></i></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="home" class="grid">
+        <section class="col-1">
+            <p class="aboutText">Welcome to my page! My name is Mouloud and I am a student at codecademy! I am learning different coding languages,
+                techniques and libraries with the goal of becoming a Full-Stack developer. I have crafted this website to showcase
+                my skills that I have developed in HTML,CSS and JavaScript and have added some projects that I have also completed.
+            </p>
+            <p class="aboutText">I hope you enjoy the content on my website, and greatly appreciate any feeback you may have. Please feel free to contact me
+                too! Via email or LinkedIn
+            </p>
+        </section>
+    <article class="col-2">
+        <h1>About me:</h1>
+        <figure>
+            <img src="./profile Picture.jpg" alt="" class="profileImg">
+            <figcaption>
+                <h3>BSc Computer Science - 2023</h3>
+            </figcaption>
+            <figcaption>
+                <h3>Codecademy Full-Stack developer Student</h3>
+            </figcaption>
+        </figure>
+    </article>
+    </main>
+    <section id="skills">
+        <h1>Skills:</h1>
+        <i class="fa-brands fa-html5"></i>
+        <i class="fa-brands fa-js"></i>
+        <i class="fa-brands fa-css3-alt"></i>
+        <i class="fa-brands fa-github"></i>
+    </section>
+    <section id="contact">
+        <h1>Contact me:</h1>
+        <a href="mailto@atmanim1@outlook.com">Email: atmanim1@outlook.com</a>
+        <i class="fa-brands fa-github"></i>
+        <i class="fa-brands fa-linkedin"></i>
+    </section>    
 </body>
 </html>
