--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
                 <a href="#skills"><li>Skills</li></a>
                 <a href="/projects.html"><li>Projects</li></a>
                 <a href="#contact"><li>Contact</li></a>
-                <li><i class="fa-brands fa-github" id="iconButton"></i></li>
-                <li><i class="fa-brands fa-linkedin" id="iconButton"></i></li>
+                <a href="https://github.com/m2ygmmm"><li><i class="fa-brands fa-github" id="iconButton"></i></li></a>
+                <a href="https://www.linkedin.com/in/mouloud-atmani-131509255/"><li><i class="fa-brands fa-linkedin" id="iconButton"></i></li></a>
             </ul>
         </nav>
     </header>
     <main id="home" class="grid">
         <section class="col-1">
+            <h1>Welcome</h1>
             <p class="aboutText">Welcome to my page! My name is Mouloud and I am a student at codecademy! I am learning different coding languages,
                 techniques and libraries with the goal of becoming a Full-Stack developer. I have crafted this website to showcase
                 my skills that I have developed in HTML,CSS and JavaScript and have added some projects that I have also completed.
@@ -38,12 +39,12 @@
     <article class="col-2">
         <h1>About me:</h1>
         <figure>
-            <img src="./profile Picture.jpg" alt="" class="profileImg">
+            <img src="./profilePicture.jpg" alt="" class="profileImg">
             <figcaption>
-                <h3>BSc Computer Science - 2023</h3>
+                <h3> - BSc Computer Science - 2023</h3>
             </figcaption>
             <figcaption>
-                <h3>Codecademy Full-Stack developer Student</h3>
+                <h3> - Codecademy Full-Stack developer Student</h3>
             </figcaption>
         </figure>
     </article>
@@ -58,8 +59,19 @@
     <section id="contact">
         <h1>Contact me:</h1>
         <a href="mailto@atmanim1@outlook.com">Email: atmanim1@outlook.com</a>
-        <i class="fa-brands fa-github"></i>
-        <i class="fa-brands fa-linkedin"></i>
     </section>    
 </body>
+<footer>
+    <h1>Created by: Mouloud Atmani</h1>
+    <ul>
+        <a href="#"><li>Home</li></a>
+        <a href="#skills"><li>Skills</li></a>
+        <a href="/projects.html"><li>Projects</li></a>
+        <a href="#contact"><li>Contact</li></a>
+    </ul>
+    <ul>
+        <a href="https://github.com/m2ygmmm"><li><i class="fa-brands fa-github" id="iconButton"></i></li></a>
+        <a href="https://www.linkedin.com/in/mouloud-atmani-131509255/"><li><i class="fa-brands fa-linkedin" id="iconButton"></i></li></a>
+    </ul>
+</footer>
 </html>
