--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5947b02e5b.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +23,7 @@
                 <a href="/index.html#contact"><li>Contact</li></a>
                 <a href="https://github.com/m2ygmmm"><li><i class="fa-brands fa-github" id="iconButton"></i></li></a>
                 <a href="https://www.linkedin.com/in/mouloud-atmani-131509255/"><li><i class="fa-brands fa-linkedin" id="iconButton"></i></li></a>
+                <i class="fa-solid fa-bars dropdownBtn" id="dropdownBtn"></i>
             </ul>
         </nav>
     </header>
@@ -32,29 +34,36 @@
    </section>
    <main class="grid-cards">
     <section class="card-1">
-        <h2>Mixed messages</h2>
-        <h4>A simple JavaScript program</h4>
+        <h2 class="cardHeading">Mixed messages</h2>
+        <h4 class="cardSubHeading">A simple JavaScript program</h4>
         <figure>
             <img src="codeImage.jpg" class="cardImg" alt="JavaScript Image">
         </figure>
         <p class="cardText">A simple JavaScript program that can predict what will happen to you during your week.....Written 
             in Vanilla JavaScript using a variation of methods and objects to output a made up and random string!
         </p>
-        <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github" id="iconButton"></i> View Now</a>
+        <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
     </section>
     <section class="card-2">
-        <h2>Mixed messages</h2>
-        <h4>A simple JavaScript program</h4>
+        <h2 class="cardHeading">NASA API</h2>
+        <h4 class="cardSubHeading">A Website to search through NASA's Image Library</h4>
         <figure>
-            <img src="codeImage.jpg" class="cardImg" alt="JavaScript Image">
+            <img src="moon.jpg" class="cardImg" alt="JavaScript Image">
         </figure>
+        <p class="cardText">A simple responsive website to search for images on the NASA Image library using the free to use
+             NASA API written in HTML, CSS (with the Bootstrap framework) and vanilla JavaScript. Enter a 'space' related term
+             into the search bar and hit search to see the results! Filter through the results using the filter button.
+            </p>
+        <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
     </section>
     <section class="card-2">
-        <h2>Mixed messages</h2>
-        <h4>A simple JavaScript program</h4>
+        <h2 class="cardHeading">Coming soon...</h2>
+        <h4 class="cardSubHeading">Coming soon...</h4>
         <figure>
-            <img src="codeImage.jpg" class="cardImg" alt="JavaScript Image">
+            <img src="comingSoon.jpg" class="cardImg" alt="JavaScript Image">
         </figure>
+        <p class="cardText">A new project is in the works! Be sure to check back again..</p>
+        <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
     </section>
    </main>
 </body>
