--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/5947b02e5b.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,6 +23,7 @@
                 <a href="#contact"><li>Contact</li></a>
                 <a href="https://github.com/m2ygmmm"><li><i class="fa-brands fa-github" id="iconButton"></i></li></a>
                 <a href="https://www.linkedin.com/in/mouloud-atmani-131509255/"><li><i class="fa-brands fa-linkedin" id="iconButton"></i></li></a>
+                <i class="fa-solid fa-bars dropdownBtn" id="dropdownBtn"></i>
             </ul>
         </nav>
     </header>
@@ -36,7 +38,7 @@
                 too! Via email or LinkedIn
             </p>
         </section>
-    <article class="col-2">
+    <section class="col-2">
         <h1>About me:</h1>
         <figure>
             <img src="./profilePicture.jpg" alt="" class="profileImg">
@@ -47,7 +49,7 @@
                 <h3> - Codecademy Full-Stack developer Student</h3>
             </figcaption>
         </figure>
-    </article>
+    </section>
     </main>
     <section id="skills">
         <h1>Skills:</h1>
