--- a/projects.html
+++ b/projects.html
@@ -57,12 +57,13 @@
         <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
     </section>
     <section class="card-2">
-        <h2 class="cardHeading">Coming soon...</h2>
-        <h4 class="cardSubHeading">Coming soon...</h4>
+        <h2 class="cardHeading">Jammming</h2>
+        <h4 class="cardSubHeading">A React program for Spotify</h4>
         <figure>
-            <img src="comingSoon.jpg" class="cardImg" alt="JavaScript Image">
+            <img src="music.jpg" class="cardImg" alt="JavaScript Image">
         </figure>
-        <p class="cardText">A new project is in the works! Be sure to check back again..</p>
+        <p class="cardText">A simple React application that allows users to search for a track and add it to a playlist and send it straight to their spotify account. 
+            The application was designed using the Spotify API and various React functions and components</p>
         <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
     </section>
    </main>
