--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="codefavicon.png">
     <script src="https://kit.fontawesome.com/5947b02e5b.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
@@ -29,8 +30,10 @@
     </header>
    <section class="heading">
     <h1>My projects</h1>
-    <p>Here are a selection of my latest projects I have created, with source code available on GitHub. Any feedback is 
-        greatly appreciated!</p>
+    <p>Presenting a selection of my latest projects, each accompanied by its source code available on GitHub. I welcome and highly appreciate any feedback you may have. Feel free to explore and share your thoughts!
+
+
+    </p>
    </section>
    <main class="grid-cards">
     <section class="card-1">
@@ -56,7 +59,7 @@
             </p>
         <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
     </section>
-    <section class="card-2">
+    <section class="card-3">
         <h2 class="cardHeading">Jammming</h2>
         <h4 class="cardSubHeading">A React program for Spotify</h4>
         <figure>
@@ -64,6 +67,15 @@
         </figure>
         <p class="cardText">A simple React application that allows users to search for a track and add it to a playlist and send it straight to their spotify account. 
             The application was designed using the Spotify API and various React functions and components</p>
+        <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
+    </section>
+    <section class="card-4">
+        <h2 class="cardHeading">FoodHelper</h2>
+        <h4 class="cardSubHeading">Fighting food poverty!</h4>
+        <figure>
+            <img src="charity.jpg" class="cardImg" alt="JavaScript Image">
+        </figure>
+        <p class="cardText">Developed using NodeJs, ExpressJs, Handlebars and MongoDB, FoodHelper is a Web Application which aims to fight food poverty by providing a platform for charities and organizations To share what they can provide to you. </p>
         <a href="https://github.com/m2ygmmm"><i class="fa-brands fa-github cardGitHub"></i></a>
     </section>
    </main>
@@ -76,8 +88,8 @@
         <a href="#"><li>Projects</li></a>
         <a href="/index.html#contact"><li>Contact</li></a>
     </ul>
-    <ul>
-        <a href="https://github.com/m2ygmmm"><li><i class="fa-brands fa-github" id="iconButton"></i></li></a>
+    <ul style="display: flex; justify-content: center;">
+        <a href="https://github.com/m2ygmmm" style="padding-right: 20px;"><li><i class="fa-brands fa-github" id="iconButton"></i></li></a>
         <a href="https://www.linkedin.com/in/mouloud-atmani-131509255/"><li><i class="fa-brands fa-linkedin" id="iconButton"></i></li></a>
     </ul>
 </footer>
