--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <h1>Welcome</h1>
             <p class="aboutText">Welcome to my page! I'm Mouloud, a Codecademy student passionately exploring diverse coding languages, techniques, and libraries. My aspiration is to evolve into a Full-Stack developer. This website serves as a testament to the skills I've honed across various languages, featuring completed projects that showcase my proficiency. Explore and witness the exciting journey of my coding endeavors!
             </p>
-            <p class="aboutText">
+            <p class="aboutText" id="aboutText2">
                 I hope you find the content on my website enjoyable, and I would greatly appreciate any feedback you might have. Please feel free to reach out to me via email or LinkedIn. Your input is valuable, and I look forward to connecting with you!
             </p>
         </section>
